[project]
name = "uber-receipts"
version = "0.1.0"
description = "Uber Receipt Downloader for bulk downloading ride receipts"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
]

[project.urls]
Repository = "https://github.com/dmahlow/uber-receipt-downloader"
